# pico-foc

./: .gitignore  .gitmodules  CMakeLists.txt  blink.c  build.zig  flake.nix  main.zig  makefile  sdk-wrapper.zig  test-sdk.zig
src/: bldc.zig  blink.c  duty_cycle.pio  duty_cycle.zig  foc.zig  main.zig  motor.zig  pwm.zig  sdk-wrapper.zig  sensor.zig  spi.zig  stdio.zig  test-sdk.zig  trapezoid.zig
